@@ -18,6 +18,8 @@
 12.  Updated NTRU files to 276ae6ae79bd97c835095051ef915861c6b01127.
      The changes provide corrections on PowerPC.
 13.  Corrected mutex usage in spoton_crypt::digitalSignature().
+14.  Corrected memset() usage in spoton_crypt::publicKeyDecryptNTRU().
+     Also modified casts.
 
 0.19 (02/22/2015)
 
